[package]
name = "linedb-rs"
version = "0.1.0"
authors = ["sergey-melnychuk"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1"
log = "0.4"
env_logger = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
